feat: first architecture, functionalities